docs(api): actualizacion

--- a/src/main/resources /application.properties
+++ b/src/main/resources /application.properties
@@ -1,6 +1,8 @@
 # === App ===
 spring.application.name=ecommerce-api
 server.port=${PORT:8080}
+# Nombre de la app y el puerto donde corre la API (por default 8080,
+# pero se puede override con la variable de entorno PORT).
 
 # === Swagger / Actuator ===
 management.endpoints.web.exposure.include=health,info,mappings
@@ -10,13 +12,19 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.packages-to-scan=com.urbancollection.ecommerce.api.web
 springdoc.paths-to-match=/api/**,/ping,/db/**
+# Estas props habilitan Swagger/OpenAPI y exponen la documentación en /swagger-ui.html.
+# También se exponen algunos endpoints de actuator (health, info, mappings)
+# para poder ver el estado básico de la app.
 
 # === Logging ===
 logging.level.root=INFO
 logging.level.com.urbancollection=DEBUG
-# para ver SQL que manda Hibernate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+# Config del log:
+# - root en INFO (log normal)
+# - nuestro paquete en DEBUG (más detalle para nosotros)
+# También activamos que Hibernate imprima las queries SQL y que las formatee.
 
 # === Persistencia (SQL Server) ===
 app.persistence.mode=sqlserver
@@ -25,22 +33,27 @@ spring.datasource.url=jdbc:sqlserver://${DB_HOST:localhost}:${DB_PORT:1433};data
 spring.datasource.username=${DB_USER:app_user}
 spring.datasource.password=${DB_PASS:P4ssw0rd!2025}
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# Configuración de conexión a la base de datos SQL Server.
+# Usamos variables de entorno para host, puerto, nombre de BD, user y pass.
+# encrypt=false/trustServerCertificate=true porque estamos apuntando a un SQL Server local/dev.
 
 # Pool Hikari
 spring.datasource.hikari.connection-timeout=${DB_CONN_TIMEOUT_MS:10000}
 spring.datasource.hikari.maximum-pool-size=${DB_POOL_MAX:10}
+# HikariCP es el pool de conexiones.
+# - connection-timeout controla cuánto esperamos antes de fallar intentando conectar.
+# - maximum-pool-size es cuántas conexiones activas máximas permitimos.
 
 # === JPA / Hibernate ===
-# MUY IMPORTANTE: no intentes crear / alterar tablas. La BD ya existe.
 spring.jpa.hibernate.ddl-auto=none
-
-# usamos el dialecto correcto para SQL Server
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-
-# no mantengas la sesión JPA pegada al request web después del controller
 spring.jpa.open-in-view=false
-
-# estas dos eran para correr scripts .sql al inicio; ya no queremos que Spring
-# intente nada raro automáticamente contra la base
 spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=false
+# Importante:
+# - ddl-auto=none \u2192 no dejo que Hibernate intente crear o modificar tablas.
+#   La base ya existe.
+# - database-platform = dialecto de SQL Server.
+# - open-in-view=false \u2192 cerramos la sesión JPA al salir del service,
+#   para no depender de lazy loading en el controller.
+# - spring.sql.init.mode=never \u2192 no ejecutar scripts .sql automáticos al inicio.
